# text-encoding-guard

./: .coverage  .gitignore  LICENSE  README.md  action.yml  package.json  pyproject.toml
.claude/: settings.json
.claude/skills/text-encoding-guard/: CLAUDE.md  SKILL.md
.github/workflows/: ci.yml
claude/text-encoding-guard/: CLAUDE.md  SKILL.md
claude/text-encoding-guard/references/: usage.md
claude/text-encoding-guard/scripts/: check_mojibake.py
codex/text-encoding-guard/: SKILL.md
codex/text-encoding-guard/agents/: openai.yaml
codex/text-encoding-guard/references/: usage.md
scripts/: check_mojibake.py
src/check_mojibake/: __init__.py  __main__.py  core.py
tests/: test_cli.py  test_detector.py
text-encoding-guard/: SKILL.md
text-encoding-guard/references/: usage.md
text-encoding-guard/scripts/: check_mojibake.py
