[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-text-encoding-guard"
version = "1.0.0"
description = "检测并修复 AI 编码助手导致的中文乱码（mojibake）| Detect and repair Chinese text encoding corruption caused by AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "haodehaode378" }]
keywords = [
    "mojibake", "encoding", "utf-8", "gbk", "chinese",
    "ai", "code-quality", "lint", "unicode", "claude-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: General",
]

[project.scripts]
check-mojibake = "check_mojibake.core:main"

[project.urls]
Homepage = "https://github.com/haodehaode378/text-encoding-guard"
Repository = "https://github.com/haodehaode378/text-encoding-guard"
Issues = "https://github.com/haodehaode378/text-encoding-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/check_mojibake"]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=check_mojibake --cov-report=term-missing --cov-fail-under=80"
# pytest-asyncio may be present in the environment even though this project has
# no async tests. Pin the fixture loop scope so it stops emitting an unset-scope
# deprecation warning.
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = ["src/check_mojibake/__main__.py"]
